# clustering-kalimantan-food-prices

./: .gitignore  README.md  README_GIT.md  pyproject.toml  pytest.ini
configs/: 2018_2023.yaml  README.md  default_consolidation.yaml  twelve_cities.yaml
data/features/: .gitkeep
data/processed/: .gitkeep  2018_2023_consolidated.csv  2018_2023_consolidated.xlsx  master_data_consolidated.csv  master_data_consolidated.xlsx  twelve_cities_consolidated.csv  twelve_cities_consolidated.xlsx
data/raw/: .gitkeep
data/raw/kalimantan-barat/kab-sintang/: 2018.xlsx  2019.xlsx  2020.xlsx  2021.xlsx  2022.xlsx  2023.xlsx  2024.xlsx
data/raw/kalimantan-barat/kota-pontianak/: 2018.xlsx  2019.xlsx  2020.xlsx  2021.xlsx  2022.xlsx  2023.xlsx  2024.xlsx
data/raw/kalimantan-barat/kota-singkawang/: 2018.xlsx  2019.xlsx  2020.xlsx  2021.xlsx  2022.xlsx  2023.xlsx  2024.xlsx
data/raw/kalimantan-selatan/kota-banjarmasin/: 2018.xlsx  2019.xlsx  2020.xlsx  2021.xlsx  2022.xlsx  2023.xlsx  2024.xlsx
data/results/: .gitkeep
logs/: .gitkeep
notebooks/: 01_data_consolidation.ipynb
scripts/: run_consolidation.py
src/clustering_food_prices_kalimantan/: __init__.py
src/clustering_food_prices_kalimantan/config/: settings.py
src/clustering_food_prices_kalimantan/data/: __init__.py  cleaner.py  consolidator.py  loader.py  validator.py
src/clustering_food_prices_kalimantan/pipelines/: __init__.py  consolidation.py
tests/: README.md  __init__.py  conftest.py
tests/consolidation/: README.md  conftest.py  test_basic_functionality.py  test_consolidation_system.py  test_consolidation_working.py  test_logging_fix.py
(+52 files in other folders)
