[project]
name = "clustering-food-prices-kalimantan"
version = "0.1.0"
description = "Food price data consolidator and clustering analyzer for Kalimantan cities"
authors = [
    {name = "garcia",email = "emmanoelgarsia@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
keywords = ["data-analysis", "food-prices", "clustering", "indonesia", "data-consolidation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=2.1.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "scipy>=1.11.0,<2.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "seaborn>=0.12.0,<1.0.0",
    "plotly>=5.15.0,<6.0.0",
    "jupyter>=1.0.0,<2.0.0",
    "ipykernel>=6.25.0,<7.0.0",
    "scikit-fuzzy>=0.4.2,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=4.1.0,<7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=4.1.0,<7.0.0",
    "black>=23.0.0,<25.0.0",
    "ruff>=0.1.0,<1.0.0",
    "mypy>=1.5.0,<2.0.0",
]

[tool.poetry]
packages = [{include = "clustering_food_prices_kalimantan", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
package-dir = {"" = "src"}